registration panel work

--- a/static/00_headers.html
+++ b/static/00_headers.html
@@ -5,6 +5,9 @@
         
         <title>shadowsword.ca</title>
 
+        <script src="/static/javascript/frontend.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
         <!-- https://coolors.co/ and https://neumorphism.io/ was helpful in generating this page. -->
         <link rel="stylesheet" href="/static/style.css">
 
