--- a/static/10_user_registration.html
+++ b/static/10_user_registration.html
@@ -5,7 +5,7 @@
             <i class='bx bxs-user-rectangle' ></i> Create Account or Login
         </blockquote>
         <div class="padleft" id="not-logged-in">
-            JavaScript <span id="jswarn"><i class='bx bxs-x-circle'></i></span> and Cookies required.<br><br><br>
+            JavaScript <span id="jswarn"><i class='bx bxs-x-circle'></i></span> and Cookies <span id="cookies_indicator"><i class='bx bxs-x-circle'></i></span> required.<br><br><br>
             <a class="cardmarine" href="#" onclick="toggleElementByID('register-user-by-password'); return false;"><i class='bx bxs-user-plus' ></i> Create Account</a>
             <br><br><br><a href="#" onclick="toggleElementByID('login-user-by-uuid'); return false;"><i class='bx bxs-user-badge' ></i> Authenticate UUID</a>
         </div>
@@ -41,6 +41,17 @@
           <script>
             $(document).ready(function(){
                 toast('jswarn',"<i class='bx bxs-check-circle' ></i>")
+                b_https = isHTTPS();
+                if (!b_https) {
+                    toast('servermsg_register',"<br><i title='Not Secure' class='bx bx-shield-minus' ></i> Not Secure (HTTP)")
+                    toast('servermsg_login',"<br><i title='Not Secure' class='bx bx-shield-minus' ></i> Not Secure (HTTP)")
+                } 
+                setCookie('test_cookie', 'test_cookie',1)
+                const cookies_available = checkCookie('test_cookie')
+                if (cookies_available) {
+                    toast('cookies_indicator',"<i class='bx bxs-check-circle' ></i>")
+                    setCookie('test_cookie','',-1)
+                }
                 $("#register_submit").click(function() {
                     entered_pass=$("#password").val();
                     entered_confirm=$("#passwordconfirm").val();
@@ -60,6 +71,54 @@
                             }
                         }
                     })
+                })
+                // register_submit but keydown at password confirm
+                $("#passwordconfirm").keydown(function(event) {
+                    
+                    if (event.keyCode == 13) {
+                        entered_pass=$("#password").val();
+                        entered_confirm=$("#passwordconfirm").val();
+                        $.post("/authorization", {mode: 'register', password: entered_pass, passwordconfirm: entered_confirm}, function(data) {
+                            if (data) {
+                                server_response = data
+                                if (server_response.server) {
+                                    toast('servermsg_register', server_response.server)
+                                } 
+                                if (server_response.grant) {
+                                    const redirection = getBaseURL() + server_response.grant.redirection
+                                    setCookie('user_uuid', server_response.grant.new_UUID, 180)
+                                    setCookie('user_hash', server_response.grant.new_HASH, 180)
+                                    setTimeout(() => {
+                                        window.location.href = redirection
+                                    }, 1500)
+                                }
+                            }
+                        })
+                    }
+                })
+                // login_submit but keydown at password
+                $("#form_login_passwd").keydown(function(event) {
+                    
+                    if (event.keyCode == 13) {
+                        entered_uuid=$("#form_uuid").val();
+                        entered_pass=$("#form_login_passwd").val();
+                        $.post("/authorization", {mode: 'login', uuid: entered_uuid, password: entered_pass}, function(data) {
+                            if (data) {
+                                server_response = data
+                                if (server_response.server) {
+                                    toast('servermsg_login', server_response.server)
+                                } 
+                                if (server_response.grant) {
+                                    const redirection = getBaseURL() + server_response.grant.redirection
+                                    setCookie('user_uuid', server_response.grant.UUID, 180)
+                                    setCookie('user_hash', server_response.grant.HASH, 180)
+                                    setTimeout(() => {
+                                        window.location.href = redirection
+                                    }, 1500)
+                                }
+                            }
+                        })
+                    }
                 })
                 $("#login_submit").click(function() {
                     entered_uuid=$("#form_uuid").val();
