--- a/static/11_user_panel_top.html
+++ b/static/11_user_panel_top.html
@@ -9,6 +9,7 @@
         <div class="column-right">
             <div class="nav-items">
               {?edit_button}
+              {?admin_button}
               <!--<a class="cardtomato" title="Home" href="/"><i class='bx bx-home-alt'></i></a>-->
             </div>
 
