--- a/static/20_about.html
+++ b/static/20_about.html
@@ -11,4 +11,7 @@
             This is very time consuming, and the replacement parts / repair work is costly.
             Please consider supporting the server by donating to our PayPal.
         </blockquote>
+      </div>
+      <div class="column-right">
+        A proof of concept demo of the functions we're implementing is available as a Python Discord bot daemon "inpw.py" under "python-stuff" on Github.
         <!-- 20_about end -->
