--- a/static/01_entry_default.html
+++ b/static/01_entry_default.html
@@ -1,13 +1,15 @@
   <section class="hero">
       <div class="hero-container">
         <div class="column-left">
-          <h1>Blockchain Data Engine</h1>
+          <h1>Timewarp Engine</h1>
           <p>
-            Plot-point BDE available for public use.
+            <i class="devicon-debian-plain"></i> <i class='bx bxl-nodejs' ></i> <i class="devicon-express-original"></i>  <i class="devicon-sequelize-plain"></i>  <i class="devicon-sqlite-plain"></i> <i class='bx bxs-cookie' ></i>
+            Version 3
             <br />
           </p>
           
           <a href="{?get_started_url}">{?get_started}</a>
+          {?start}
         </div>
         <div class="column-right">
           <blockquote>
