--- a/static/00_headers.html
+++ b/static/00_headers.html
@@ -15,7 +15,7 @@
 
         <!-- boxicons -->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+        <!--<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>-->
 
         <!-- http://vorillaz.github.io/devicons/#/dafont -->
         <link rel="shortcut icon" href="/favico.ico" type="image/x-icon">
@@ -26,10 +26,26 @@
     </head>
     <body onload="init_page()">
         <nav>
-            <div class="logo">shadowsword.ca</div>
+            <div class="logo"><i class='bx bxs-landscape bx-flip-horizontal' ></i> shadowsword.ca</div>
             <div class="nav-items">
+
+                <span id="server-message-flag" class="hidden dropdown buttonlike cardmarine">
+                    <span title="Server Message">
+                    <!-- Can also call for the message to be displayed at the servers request
+                    At this point, server-message innerHTML can be called to display a message with any dd-element. -->
+                    <span id="server-message" class="dd">
+                        <span class="dd-element"><i class='bx bxs-error-alt bx'></i></span>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque pulvinar pellentesque habitant morbi tristique senectus. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Congue quisque egestas diam in. Bibendum est ultricies integer quis auctor elit sed. Tempor orci eu lobortis elementum. Id nibh tortor id aliquet lectus proin nibh nisl. Amet massa vitae tortor condimentum lacinia quis vel. Non diam phasellus vestibulum lorem sed risus ultricies tristique. 
+                        <a href="/about" title="hidden!">Something Somewhere</a>
+                    </span>
+                    <i class='bx bxs-error-alt bx-flashing'></i></span> 
+                </span>
+
                 <a class="cardmarine" title="Home" href="/"><i class='bx bx-home-alt'></i></a>
                 <a class="cardtomato" title="User Account" href="{?user_account_url}"><i class='bx bxs-user-account'></i></a>
+
+                <!-- Server tells server-message-flag class to be dropdown / to display -->
+                
                 <a title="Contact" href="mailto:shadowsword@protonmail.com"><i class='bx bx-mail-send'></i></a> 
                 <a title="Github Project" href="https://github.com/shir0tetsuo/shadowpage-engine"> <i class="devicon-github-original"></i></a> 
                 <a title="Donate" href="https://paypal.me/sabredevelopment"><i class='bx bxl-paypal' ></i></a>
@@ -37,11 +53,18 @@
                 <a id="logout_button" title="Logout" onclick="userLogout(); return false;" href="/"><i class='bx bx-log-out-circle' ></i></a>
             </div>
           </nav>
+          
           <script type="text/javascript">
             function init_page() {
                 element = document.getElementById('logout_button')
                 if (!checkCookie('user_uuid')) {
                     element.style.display = 'none';
+                }
+                const ServerMessageSent = checkCookie('ServerMessage')
+                if (getCookieValue('ServerMessage') === 'user-not-found') {
+                    removeHiddenClass('server-message-flag')
+                    const unfound_user = getCookieValue('UserNotFound')
+                    toast('server-message',`<i class='bx bxs-file-find' ></i> Cannot find user ${unfound_user}. <a onclick="setCookie('ServerMessage', '', -1); setCookie('UserNotFound', '', -1); addHiddenClass('server-message-flag');" href="#">Dismiss</a>`)
                 }
             }
           </script>
