--- a/static/11_user_panel_top.html
+++ b/static/11_user_panel_top.html
@@ -2,9 +2,10 @@
       <div class="user-container">
         <div class="column-left">
           User Account <div class="hidden" id="field_uuid">{?field_acc_uuid}</div>
-          <blockquote>
-              <span title="Click to Copy UUID" style="cursor: grab;" onclick="copyToClipboard('field_uuid')">{?field_acc_uuid}</span>
+          <blockquote style="border-left: 1rem solid #FFF; color: #FFF;">
+              <span title="Click to Copy UUID" style="cursor: copy;" onclick="copyToClipboard('field_uuid')">{?field_acc_uuid}</span>
           </blockquote>
+
         </div>
         <div class="column-right">
             <div class="nav-items">
